# Ingestor

./: CMakeLists.txt  README.md  build.sh  run.sh
include/: extractor.hpp  loader.hpp  logger.hpp  pipeline_manager.hpp  thread_safe_queue.hpp  transformer.hpp
source/: extractor.cpp  loader.cpp  logger.cpp  main.cpp  pipeline_manager.cpp  transformer.cpp
